gitops-repo-myapp-master/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-app-2
  name: sample-app-2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sample-app-2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-app-2
        deployment: sample-app-2
    spec:
      containers:
      - image: dotnet-6.0
        imagePullPolicy: Always
        name: sample-app-2
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
        - name: quay
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
