gitops-repo-myapp-master/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-app-2
  name: sample-app-2
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: sample-app-2
    deployment: sample-app-2
